--- a/package.json
+++ b/package.json
@@ -1,34 +1,26 @@
 {
-  "name": "svelte-ts-tailwind-app",
-  "version": "1.0.0",
+  "name": "connect-four",
+  "version": "1.1.0-alpha.1",
   "private": true,
+  "type": "module",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^21.0.0",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-typescript": "^8.3.0",
-    "@tsconfig/svelte": "^3.0.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.4",
-    "postcss-load-config": "^3.1.0",
-    "rollup": "^2.67.1",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.46.4",
-    "svelte-check": "^2.4.3",
-    "svelte-preprocess": "^4.9.4",
-    "tailwindcss": "~3.0.0",
-    "tslib": "^2.3.1",
-    "typescript": "~4.5.5"
-  },
-  "dependencies": {
-    "sirv-cli": "^2.0.2"
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
+    "@tsconfig/svelte": "^5.0.2",
+    "svelte": "^5.0.0-next.11",
+    "svelte-check": "^3.6.1",
+    "svelte-preprocess": "^5.1.1",
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.2",
+    "vite": "^5.0.2",
+    "postcss": "^8.4.23",
+    "postcss-load-config": "^4.0.1",
+    "autoprefixer": "^10.4.14",
+    "tailwindcss": "^3.3.5"
   }
 }
