--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
   "name": "connect-four",
-  "version": "1.1.0-alpha.1",
+  "version": "1.1.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "format": "prettier --write .",
+    "lint": "prettier --check ."
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^3.0.1",
-    "@tsconfig/svelte": "^5.0.2",
-    "svelte": "^5.0.0-next.11",
-    "svelte-check": "^3.6.1",
-    "svelte-preprocess": "^5.1.1",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.2",
-    "vite": "^5.0.2",
-    "postcss": "^8.4.23",
-    "postcss-load-config": "^4.0.1",
-    "autoprefixer": "^10.4.14",
-    "tailwindcss": "^3.3.5"
+    "@sveltejs/vite-plugin-svelte": "^5.0.1",
+    "@tsconfig/svelte": "^5.0.4",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "postcss-load-config": "^6.0.1",
+    "prettier": "^3.3.2",
+    "prettier-plugin-svelte": "^3.2.6",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "svelte": "^5.2.9",
+    "svelte-check": "^4.1.0",
+    "svelte-preprocess": "^6.0.2",
+    "tailwindcss": "^3.4.15",
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.0"
+  },
+  "overrides": {
+    "@sveltejs/vite-plugin-svelte": "^5.0.1"
   }
 }
